--- a/01_Positioning_Elements/3_inline_block_elements/unsolved/css/index.css
+++ b/01_Positioning_Elements/3_inline_block_elements/unsolved/css/index.css
@@ -4,7 +4,32 @@ nav {
 }
 
 /* target the class of inline-block below */
-
+.inline-block {
+  display: inline-block;
+  padding: 15px;
+}
 /* target the class of .left below */
-
+.left {
+height: 500px;
+width:30%;
+float: left;
+background-color: lightblue;
+text-align: center;
+}
 /* target the class of .right below */
+.right {
+  height: 500px;
+  float:right;
+  width: 70%;
+  background-color: lightgreen;
+}
+
+.card{
+  display: inline-block;
+  background-color: #C6C6C6;
+  border-radius: 5px;
+  height:200px;
+  width:150px;
+  text-align: center;
+  margin: 35px 50px 0;
+}
